--- a/src/componenets/Header.scss
+++ b/src/componenets/Header.scss
@@ -41,6 +41,10 @@
 						width: 0;
 					}
 				}
+				.sign{
+					&.none{display: none;}
+					&.show{display: block;}
+				}
 			}
 			ul{
 				display: flex;
