--- a/src/componenets/products.scss
+++ b/src/componenets/products.scss
@@ -15,38 +15,42 @@
 		padding: 0 50px;
 		display: flex;
 		flex-wrap: wrap;
+		box-sizing: border-box;
 		.product-card{
-			width: 400px;
-			height: 600px;
-			margin-right: 30px;
-			margin-bottom: 30px;
-			border: 1px solid rgba(230,230,230,1);
-			border-radius: 12px;
-			.productImg{
-				width: 100%;
-				height:400px;
-				img{height:100%; width:100%; object-fit: cover;}
-			}
-			.product-content{
-				padding: 20px 30px;
-				display: flex;
-				flex-direction: column;
-				text-align: left;
-				>span{}
-				.product-name{
-					font-size: 18px;
+				width:23%;
+				height: 600px;
+				margin: 1%;
+				border: 1px solid rgba(230,230,230,1);
+				border-radius: 12px;
+				box-sizing: border-box;
+			a{
+				color: #333;
+				
+				.productImg{
+					width: 100%;
+					height:400px;
+					img{height:100%; width:100%; object-fit: cover;}
 				}
-				.product-price{
-					font-size: 18px;
-					font-weight: bold;
-					margin-top: 10px;
-				}
-				.product-seller{
+				.product-content{
+					padding: 20px 30px;
 					display: flex;
-					align-items: center;
-					margin-top: 20px;
-					.icon{font-size: 24px; margin-right: 10px;}
-					>span{}
+					flex-direction: column;
+					text-align: left;
+
+					.product-name{
+						font-size: 18px;
+					}
+					.product-price{
+						font-size: 18px;
+						font-weight: bold;
+						margin-top: 10px;
+					}
+					.product-seller{
+						display: flex;
+						align-items: center;
+						margin-top: 20px;
+						.icon{font-size: 24px; margin-right: 10px;}
+					}
 				}
 			}
 		}
